# raylib_template

./: CMakeLists.txt
src/: main.cpp
